# amsterdam-agent-skills

./: AGENTS.md  README.md
.claude/: settings.local.json
skills/amsterdam-design-system/: SKILL.md
skills/amsterdam-design-system/references/: components.md  icons.md  layout-patterns.md  tailwind-bridge.md  tokens.md
skills/amsterdam-stijl/: SKILL.md
skills/amsterdam-stijl/references/: eenvoudige-taal.md  hoofdletters.md  inclusief-taalgebruik.md  juridisch-woordenboek.md  tekstsoorten.md  voorbeelden.md  woordenlijst.md
skills/jira-cli-ji/: SKILL.md
skills/jira-cli-ji/cli-source/: pyproject.toml
skills/jira-cli-ji/cli-source/jira_cli/: cli.py  client.py  config.py  display.py
skills/jira-cli-ji/references/: jql-patterns.md
