[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-ga-cli"
version = "0.1.0"
description = "Lightweight Jira CLI using Basic Auth"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
ji = "jira_cli.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["jira_cli"]
